Implement JWT authentication: add login, logout, and profile retrieval functionality; enhance logs and student details retrieval with error handling; update dependencies and middleware for token verification.

--- a/frontend/user-view/studentCalendar.html
+++ b/frontend/user-view/studentCalendar.html
@@ -228,7 +228,8 @@
   <script src="/frontend/config.js"></script>
   <script src="/frontend/user-view/scripts/studentCalendar.js"></script>
   <script src="/frontend/user-view/routes/signout.js"></script>
-  <script src="/frontend/user-view/scripts/backend/a.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="/frontend/user-view/scripts/backend/studentCalendar.js"></script>
 </body>
 
 </html>
