Enhance authentication flow: add token to login response, store token in local storage, and update sign-out redirection; refactor token retrieval in middleware and student calendar scripts.

--- a/frontend/user-view/studentCalendar.html
+++ b/frontend/user-view/studentCalendar.html
@@ -35,7 +35,7 @@
     <!-- Dropdown Menu -->
     <div class="dropDownMenu">
       <div class="profileDrop">View Profile</div>
-      <div class="signDrop">Sign Out</div>
+      <div id="signDrop" class="signDrop">Sign Out</div>
     </div>
 
   </nav>
