Added jwt authentication validation

--- a/frontend/user-view/studentCalendar.html
+++ b/frontend/user-view/studentCalendar.html
@@ -204,7 +204,7 @@
 
           <!-- Log Header -->
           <div class="log-header">
-            <span id="log-date">Thu, April 11</span>
+            <span id="log-date"> </span>
           </div>
 
           <!-- Log Content -->
