Refactor supervisor assignment and logging functionality: - Replace internal database references with a unified pool instance. - Implement new routes and controllers for fetching students by supervisor unit. - Add functionality to submit all unsubmitted logs. - Enhance frontend to display supervisor information and student lists.

--- a/frontend/supervisor-view/homeListView.html
+++ b/frontend/supervisor-view/homeListView.html
@@ -44,6 +44,10 @@
                 IT Students
             </div>
 
+            <div id="profilename" class="profilename">
+                Welcome, Supervisor
+            </div>
+            
             <!-- ===== Search Bar Section ===== -->
             <div class="searchBars">
 
@@ -131,8 +135,8 @@
     ========================== -->
     <script src="/frontend/config.js"></script>
     <script src="/frontend/supervisor-view/scripts/homeListView.js"></script>
+    <!-- <script src="/frontend/supervisor-view/scripts/backend/homeListView.js"></script> -->
 
 </body>
 
 </html>
-
