Added supervisor functionality to view only students in their unit

--- a/frontend/supervisor-view/StudentLog.html
+++ b/frontend/supervisor-view/StudentLog.html
@@ -105,22 +105,26 @@
                     <div class="majorInfoContain">
 
                         <div class="uniContain">
-                            <div class="uniIcon"><img src="/frontend/supervisor-view/assets/schoolVector.svg" alt=""></div>
+                            <div class="uniIcon"><img src="/frontend/supervisor-view/assets/schoolVector.svg" alt="">
+                            </div>
                             <div class="Uni">Yale University</div>
                         </div>
 
                         <div class="uniContain">
-                            <div class="uniIcon"><img src="/frontend/supervisor-view/assets/levelVector.svg" alt=""></div>
+                            <div class="uniIcon"><img src="/frontend/supervisor-view/assets/levelVector.svg" alt="">
+                            </div>
                             <div class="Uni">400L</div>
                         </div>
 
                         <div class="uniContain">
-                            <div class="uniIcon"><img src="/frontend/supervisor-view/assets/durationVector.svg" alt=""></div>
+                            <div class="uniIcon"><img src="/frontend/supervisor-view/assets/durationVector.svg" alt="">
+                            </div>
                             <div class="Uni">6 Months</div>
                         </div>
 
                         <div class="uniContain">
-                            <div class="uniIcon"><img src="/frontend/supervisor-view/assets/emailVector.svg" alt=""></div>
+                            <div class="uniIcon"><img src="/frontend/supervisor-view/assets/emailVector.svg" alt="">
+                            </div>
                             <div class="Uni">johndoe@gmail.com</div>
                         </div>
 
@@ -258,11 +262,9 @@
     </section>
 
     <!-- Main JS Script -->
-     <script src="/frontend/config.js"></script>
+    <script src="/frontend/config.js"></script>
     <script src="/frontend/supervisor-view/scripts/log.js"></script>
 
 </body>
 
 </html>
-
-
