--- a/frontend/supervisor-view/homeListView.html
+++ b/frontend/supervisor-view/homeListView.html
@@ -40,13 +40,15 @@
         <div class="topSection">
 
             <!-- IT Students Heading -->
+             <div id="profilename" class="profilename">
+                Welcome, Supervisor
+            </div>
+
             <div class="ItHeader">
                 IT Students
             </div>
 
-            <div id="profilename" class="profilename">
-                Welcome, Supervisor
-            </div>
+            
             
             <!-- ===== Search Bar Section ===== -->
             <div class="searchBars">
@@ -135,7 +137,7 @@
     ========================== -->
     <script src="/frontend/config.js"></script>
     <script src="/frontend/supervisor-view/scripts/homeListView.js"></script>
-    <!-- <script src="/frontend/supervisor-view/scripts/backend/homeListView.js"></script> -->
+    <script src="/frontend/supervisor-view/scripts/backend/homeListView.js"></script>
 
 </body>
 
