--- a/frontend/hr-view/hrDash.html
+++ b/frontend/hr-view/hrDash.html
@@ -112,15 +112,24 @@
                             </div>
 
                         </div>
-                        <div class="NameFieldContain">
-                            <div class="NameFieldText">
-                                Duration:
+                        <div class="durationContain">
+                            <div class="NameFieldContain3">
+                                <div class="NameFieldText3">
+                                    Duration:
+                                </div>
+                                <div class="NameFieldInput3">
+                                    <input type="text" id="studentDuration" placeholder="6 Months">
+                                </div>
                             </div>
-                            <div class="NameFieldInput">
-                                <input type="text" id="studentDuration" placeholder="6 Months">
 
+                            <div class="NameFieldContain4">
+                                <div class="NameFieldText4">
+                                    Start Date:
+                                </div>
+                                <div class="NameFieldInput4">
+                                    <input type="date" id="studentStartDate" placeholder="DD/MM/YYYY">
+                                </div>
                             </div>
-
                         </div>
                         <div class="NameFieldContain">
                             <div class="NameFieldText">
