feat: Implement student profile and update modal functionality
- Added hrstudentProfile.js to fetch and display student details based on studentId from URL or localStorage.
- Implemented error handling and user feedback for loading issues.
- Created updateStudentModal.js to handle student registration, including unit and supervisor selection.
- Integrated unit fetching and supervisor assignment based on selected unit.
- Added form validation for required fields and password confirmation during student registration.
- Developed route.js for navigation handling in the supervisor view.
- Created studentProfile.js for displaying student information in the supervisor view, similar to hrstudentProfile.js.

--- a/frontend/hr-view/hrstudentProfile.html
+++ b/frontend/hr-view/hrstudentProfile.html
@@ -31,7 +31,7 @@
         <div class="heading">
             <div class="headingContain">
                 <div class="backArrow">
-                    <img src="./assets/Icons copy 3.svg" alt="">
+                    <img src="/frontend/hr-view/assets/Icons copy 3.svg" alt="">
 
                 </div>
                 <div class="headTxt">
@@ -457,7 +457,7 @@
     </section>
     <script src="/frontend/config.js"></script>
     <script src="./scripts/hrstudentProfile.js"></script>
-    <script src="./scripts/backend/studentProfile.js"></script>
+    <script src="./scripts/backend/hrstudentProfile.js"></script>
     <script src="./routes/hrDashRoute.js"></script>
 </body>
 
