--- a/frontend/supervisor-view/studentProfile.html
+++ b/frontend/supervisor-view/studentProfile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Profile</title>
-    <link rel="stylesheet" href="./styles/hrstudentProfile.css">
+    <link rel="stylesheet" href="./styles/studentProfile.css">
     <script src="./scripts/jQuery v3.7.1.js"></script>
 </head>
 
