--- a/frontend/hr-view/hrstudentProfile.html
+++ b/frontend/hr-view/hrstudentProfile.html
@@ -167,16 +167,25 @@
                                 </div>
 
                             </div>
-                            <div class="NameFieldContain">
-                                <div class="NameFieldText">
+                            <div class="durationContain">
+                            <div class="NameFieldContain3">
+                                <div class="NameFieldText3">
                                     Duration:
                                 </div>
-                                <div class="NameFieldInput">
+                                <div class="NameFieldInput3">
                                     <input type="text" id="studentDuration" placeholder="6 Months">
-
                                 </div>
-
                             </div>
+
+                            <div class="NameFieldContain4">
+                                <div class="NameFieldText4">
+                                    Start Date:
+                                </div>
+                                <div class="NameFieldInput4">
+                                    <input type="date" id="studentStartDate" placeholder="DD/MM/YYYY">
+                                </div>
+                            </div>
+                        </div>
                             <div class="NameFieldContain">
                                 <div class="NameFieldText">
                                     Interest:
@@ -366,7 +375,7 @@
                             <div class="infoLabel">
                                 Start Date
                             </div>
-                            <div class="infoData">
+                            <div id="startdate" class="infoData">
                                 01/05/2025
                             </div>
                         </div>
@@ -458,6 +467,8 @@
     <script src="/frontend/config.js"></script>
     <script src="./scripts/hrstudentProfile.js"></script>
     <script src="./scripts/backend/hrstudentProfile.js"></script>
+    <script src="/frontend/hr-view/scripts/backend/addStudentModal copy.js"></script>
+    <!-- <script src="/frontend/hr-view/scripts/backend/updateStudentModal.js"></script> -->
     <script src="./routes/hrDashRoute.js"></script>
 </body>
 
