feat: Refactor student update functionality and improve UI interactions

--- a/frontend/hr-view/hrDash.html
+++ b/frontend/hr-view/hrDash.html
@@ -15,7 +15,7 @@
             <img src="/frontend/hr-view/assets/24388.svg" alt="">
         </div>
         <div class="logoutContain" id="logoutDropdown">
-            <div class="navName">
+            <div class="navName" id="navName">
                 John Doe
             </div>
             <div class="navPic">
