--- a/frontend/hr-view/hrstudentProfile.html
+++ b/frontend/hr-view/hrstudentProfile.html
@@ -467,8 +467,7 @@
     <script src="/frontend/config.js"></script>
     <script src="./scripts/hrstudentProfile.js"></script>
     <script src="./scripts/backend/hrstudentProfile.js"></script>
-    <script src="/frontend/hr-view/scripts/backend/addStudentModal copy.js"></script>
-    <!-- <script src="/frontend/hr-view/scripts/backend/updateStudentModal.js"></script> -->
+    <script src="/frontend/hr-view/scripts/backend/updateStudentModal.js"></script>
     <script src="./routes/hrDashRoute.js"></script>
 </body>
 
