applied figma changes to the log page removed checkboxes

--- a/frontend/staff view/log.html
+++ b/frontend/staff view/log.html
@@ -41,49 +41,49 @@
                 <div class="monthTxt">
                     Month 1
                 </div>
-                <div class="checkBox">
+                <!-- <div class="checkBox">
                     <img src="./assets/CheckCircle.svg" alt="">
-                </div>
+                </div> -->
             </div>
             <div class="btnContain" data-month="2">
                 <div class="monthTxt">
                     Month 2
                 </div>
-                <div class="checkBox">
+                <!-- <div class="checkBox">
                     <img src="./assets/CheckCircle.svg" alt="">
-                </div>
+                </div> -->
             </div>
             <div class="btnContain" data-month="3">
                 <div class="monthTxt">
                     Month 3
                 </div>
-                <div class="checkBox">
+                <!-- <div class="checkBox">
                     <img src="./assets/CheckCircle.svg" alt="">
-                </div>
+                </div> -->
             </div>
             <div class="btnContain" data-month="4">
                 <div class="monthTxt">
                     Month 4
                 </div>
-                <div class="checkBox">
+                <!-- <div class="checkBox">
                     <img src="./assets/CheckCircle.svg" alt="">
-                </div>
+                </div> -->
             </div>
             <div class="btnContain" data-month="5">
                 <div class="monthTxt">
                     Month 5
                 </div>
-                <div class="checkBox">
+                <!-- <div class="checkBox">
                     <img src="./assets/CheckCircle.svg" alt="">
-                </div>
+                </div> -->
             </div>
             <div class="btnContain" data-month="6">
                 <div class="monthTxt">
                     Month 6
                 </div>
-                <div class="checkBox">
+                <!-- <div class="checkBox">
                     <img src="./assets/CheckCircle.svg" alt="">
-                </div>
+                </div> -->
             </div>
 
         </div>
@@ -222,33 +222,33 @@
                         <div class="weekTxt">
                             Week 1
                         </div>
-                        <div class="checkBox2">
+                        <!-- <div class="checkBox2">
                             <img src="./assets/CheckCircle.svg" alt="">
-                        </div>
+                        </div> -->
                     </div>
                     <div class="weekBtn" data-week="2">
                         <div class="weekTxt">
                             Week 2
                         </div>
-                        <div class="checkBox2">
+                        <!-- <div class="checkBox2">
                             <img src="./assets/CheckCircle.svg" alt="">
-                        </div>
+                        </div> -->
                     </div>
                     <div class="weekBtn" data-week="3">
                         <div class="weekTxt">
                             Week 3
                         </div>
-                        <div class="checkBox2">
+                        <!-- <div class="checkBox2">
                             <img src="./assets/CheckCircle.svg" alt="">
-                        </div>
+                        </div> -->
                     </div>
                     <div class="weekBtn" data-week="4">
                         <div class="weekTxt">
                             Week 4
                         </div>
-                        <div class="checkBox2">
+                        <!-- <div class="checkBox2">
                             <img src="./assets/CheckCircle.svg" alt="">
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="activeWeek">
