--- a/frontend/supervisor-view/studentProfile.html
+++ b/frontend/supervisor-view/studentProfile.html
@@ -53,9 +53,9 @@
                             <img src="/frontend/supervisor-view/assets/picVector.png" alt="Upload Icon">
 
                         </div>
-                        <div class="txtBox">
+                        <!-- <div class="txtBox">
                             Click to change Image
-                        </div>
+                        </div> -->
                     </div>
                     <input type="file" id="selectImage" accept="image/*">
 
