--- a/frontend/hr-view/hrstudentProfile.html
+++ b/frontend/hr-view/hrstudentProfile.html
@@ -168,24 +168,24 @@
 
                             </div>
                             <div class="durationContain">
-                            <div class="NameFieldContain3">
-                                <div class="NameFieldText3">
-                                    Duration:
+                                <div class="NameFieldContain3">
+                                    <div class="NameFieldText3">
+                                        Duration:
+                                    </div>
+                                    <div class="NameFieldInput3">
+                                        <input type="text" id="studentDuration" placeholder="6 Months">
+                                    </div>
                                 </div>
-                                <div class="NameFieldInput3">
-                                    <input type="text" id="studentDuration" placeholder="6 Months">
-                                </div>
-                            </div>
 
-                            <div class="NameFieldContain4">
-                                <div class="NameFieldText4">
-                                    Start Date:
-                                </div>
-                                <div class="NameFieldInput4">
-                                    <input type="date" id="studentStartDate" placeholder="DD/MM/YYYY">
+                                <div class="NameFieldContain4">
+                                    <div class="NameFieldText4">
+                                        Start Date:
+                                    </div>
+                                    <div class="NameFieldInput4">
+                                        <input type="date" id="studentStartDate" placeholder="DD/MM/YYYY">
+                                    </div>
                                 </div>
                             </div>
-                        </div>
                             <div class="NameFieldContain">
                                 <div class="NameFieldText">
                                     Interest:
@@ -241,7 +241,8 @@
                                     Email:
                                 </div>
                                 <div class="NameFieldInput">
-                                    <input type="email" id="studentEmail">
+                                    <input type="email" id="studentEmail" autocomplete="off" readonly
+                                        onfocus="this.removeAttribute('readonly')">
                                 </div>
                             </div>
 
@@ -250,7 +251,8 @@
                                     Password:
                                 </div>
                                 <div class="NameFieldInput">
-                                    <input type="password" id="studentPassword">
+                                    <input type="password" id="studentPassword" autocomplete="new-password" readonly
+                                        onfocus="this.removeAttribute('readonly')">
                                 </div>
                             </div>
 
