Refactor code structure and remove redundant sections for improved readability and maintainability

--- a/frontend/user-view/studentProfile.html
+++ b/frontend/user-view/studentProfile.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Profile</title>
-  <link rel="stylesheet" href="./styles/studentProfile.css">
-  <script src="./scripts/jQuery v3.7.1.js"></script>
+  <link rel="stylesheet" href="/frontend/user-view/styles/studentProfile.css">
+  <script src="/frontend/user-view/scripts/jQuery v3.7.1.js"></script>
 </head>
 
 <body>
@@ -251,7 +251,8 @@
   <script src="/frontend/config.js"></script>
   <script src="/frontend/user-view/scripts/studentProfile.js"></script>
   <script src="/frontend/user-view/scripts/backend/studentProfile.js"></script>
-  <script src="/frontend/user-view/routes/signout.js"></script>
+  <script src="/frontend/user-view/scripts/backend/uploadImage.js"></script>
+  <script src="/frontend/user-view/routes/route.js"></script>
 </body>
 
 </html>
