Refactor code structure for improved readability and maintainability

--- a/frontend/hr-view/hrstudentProfile.html
+++ b/frontend/hr-view/hrstudentProfile.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Profile</title>
     <link rel="stylesheet" href="./styles/hrstudentProfile.css">
-    <script src="./scripts/jQuery v3.7.1.js"></script>
+    <script src="/frontend/hr-view/scripts/jQuery v3.7.1.js"></script>
 </head>
 
 <body>
