--- a/frontend/supervisor-view/StudentLog.html
+++ b/frontend/supervisor-view/StudentLog.html
@@ -263,6 +263,7 @@
 
     <!-- Main JS Script -->
     <script src="/frontend/config.js"></script>
+    <script src="/frontend/supervisor-view/routes/route.js"></script>
     <script src="/frontend/supervisor-view/scripts/studentLog.js"></script>
     <script src="/frontend/supervisor-view/scripts/backend/studentLog.js"></script>
 
