--- a/frontend/supervisor-view/homeListView.html
+++ b/frontend/supervisor-view/homeListView.html
@@ -21,9 +21,9 @@
             <img src="/frontend/supervisor-view/ASSETS/24388.svg" alt="App Logo">
         </div>
 
-        <!-- Sign Out Button -->
-        <div class="signout" id="signout">
-            <div class="sText" id="sText">Sign Out</div>
+        <!-- Logout Button -->
+        <div class="signout" id="logout">
+            <div class="sText" id="sText">Signout</div>
             <div class="sIcon">
                 <img src="/frontend/supervisor-view/assets/logbntsvg.svg" alt="Logout Icon">
             </div>
@@ -138,6 +138,7 @@
     <script src="/frontend/config.js"></script>
     <script src="/frontend/supervisor-view/scripts/homeListView.js"></script>
     <script src="/frontend/supervisor-view/scripts/backend/homeListView.js"></script>
+    <script src="/frontend/supervisor-view/routes/route.js"></script>
 
 </body>
 
