feat: Implement photo upload and management routes with image optimization

--- a/frontend/hr-view/hrGrid.html
+++ b/frontend/hr-view/hrGrid.html
@@ -1150,6 +1150,7 @@
     <script src="/frontend/config.js"></script>
     <script src="/frontend/hr-view/scripts/hrGrid.js"></script>
     <script src="/frontend/hr-view/routes/hrDashRoute.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>    
     <script src="/frontend/hr-view/scripts/backend/studentGrid.js"></script>
 </body>
 
