refactor: Update user authentication handling to use sessionStorage and improve token validation

--- a/frontend/user-view/studentCalendar.html
+++ b/frontend/user-view/studentCalendar.html
@@ -8,6 +8,7 @@
 
   <!-- External Stylesheet -->
   <link rel="stylesheet" href="/frontend/user-view/styles/studentsCalendar.css" />
+  <script src="/frontend/user-view/scripts/jQuery v3.7.1.js"></script>
 
 </head>
 
