--- a/frontend/user-view/studentProfile.html
+++ b/frontend/user-view/studentProfile.html
@@ -30,7 +30,7 @@
 
     <!-- Dropdown Menu -->
     <div class="dropDownMenu">
-      <div class="profileDrop">View Profile</div>
+      <!-- <div class="profileDrop">View Profile</div> -->
       <div id="signDrop" class="signDrop">Sign Out</div>
     </div>
 
@@ -251,8 +251,8 @@
   <script src="/frontend/config.js"></script>
   <script src="/frontend/user-view/scripts/studentProfile.js"></script>
   <script src="/frontend/user-view/scripts/backend/studentProfile.js"></script>
-  <script src="/frontend/user-view/scripts/backend/uploadImage.js"></script>
   <script src="/frontend/user-view/routes/route.js"></script>
+  <!-- <script src="/frontend/user-view/scripts/backend/uploadImage.js"></script> -->
 </body>
 
 </html>
