--- a/frontend/supervisor-view/studentProfile.html
+++ b/frontend/supervisor-view/studentProfile.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Profile</title>
     <link rel="stylesheet" href="./styles/studentProfile.css">
-    <script src="./scripts/jQuery v3.7.1.js"></script>
+    <script src="/frontend/hr-view/scripts/jQuery v3.7.1.js"></script>
 </head>
 
 <body>
     <nav class="header">
         <div class="logoContain">
-            <img src="/frontend/hr-view/assets/24388.svg" alt="">
+            <img src="./assets/24388.svg" alt="">
         </div>
         <div class="logoutContain" id="logoutDropdown">
             <div class="navName">
                 John Doe
             </div>
             <div class="navPic">
-                <img src="/frontend/hr-view/assets/johndoe.png" alt="">
+                <img src="./assets/johndoe.png" alt="">
 
             </div>
         </div>
@@ -31,7 +31,8 @@
         <div class="heading">
             <div class="headingContain">
                 <div class="backArrow">
-                    <img src="/frontend/supervisor-view/assets/backVector.svg" alt="Go Back">
+                    <img src="/frontend/hr-view/assets/Icons copy 3.svg" alt="">
+
                 </div>
                 <div class="headTxt">
                     Student Profile
@@ -45,23 +46,21 @@
             <div class="photoNname">
                 <div class="profilePhoto">
                     <div class="photoBox">
-                        <img src="/frontend/hr-viewassets/johndoe.png" alt="">
+                        <img src="./assets/johndoe.png" alt="">
 
                     </div>
                     <div class="uploadBox" id="uploadTrigger">
                         <div class="imgBox">
-                            <img src="/frontend/supervisor-view/assets/picVector.png" alt="Upload Icon">
+                            <img src="./assets/Vector copy 2.png" alt="">
 
                         </div>
-                        <!-- <div class="txtBox">
+                        <div class="txtBox">
                             Click to change Image
-                        </div> -->
+                        </div>
                     </div>
                     <input type="file" id="selectImage" accept="image/*">
 
                 </div>
-
-                <!--Student's Biodata-->
                 <div class="nameInterest">
                     <div class="johnDoe">
                         John Doe
@@ -92,7 +91,213 @@
                 <div class="titleEdit">
                     <div class="infoTitle">
                         BIODATA
+
                     </div>
+                    <!-- <div class="editBio" id="editBio">
+                        Edit
+                    </div> -->
+                </div>
+                <!-- ----------Add student Modal-------- -->
+                <div class="overlay" id="overlay">
+                    <div class="addModal" id="addStudentModal">
+                        <div class="modalHead">
+                            <div class="headText">
+                                New Student
+                            </div>
+                            <div class="closeBox">
+                                <img src="./assets/close-circle.svg" alt="" id="closeModal">
+                            </div>
+                        </div>
+
+                        <div class="studentInfo">
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Name:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="text" id="studentName">
+                                </div>
+
+                            </div>
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Institution:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="text" id="studentInstitution">
+
+                                </div>
+
+                            </div>
+                            <div class="levelContain">
+                                <div class="NameFieldContain2">
+                                    <div class="NameFieldText2">
+                                        Level:
+                                    </div>
+                                    <div class="NameFieldInput2">
+                                        <input type="text" id="studentLevel">
+
+                                    </div>
+
+
+                                </div>
+                                <div class="genderGroup">
+                                    <label class="customRadio">
+                                        <input type="radio" name="gender" value="male">
+                                        <span class="radioCircle"></span>
+                                        Male
+                                    </label>
+                                    <label class="customRadio">
+                                        <input type="radio" name="gender" value="female">
+                                        <span class="radioCircle"></span>
+                                        Female
+                                    </label>
+                                </div>
+
+                            </div>
+
+
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Course of Study:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="text" id="studentCourse">
+
+                                </div>
+
+                            </div>
+                            <div class="durationContain">
+                                <div class="NameFieldContain3">
+                                    <div class="NameFieldText3">
+                                        Duration:
+                                    </div>
+                                    <div class="NameFieldInput3">
+                                        <input type="text" id="studentDuration" placeholder="6 Months">
+                                    </div>
+                                </div>
+
+                                <div class="NameFieldContain4">
+                                    <div class="NameFieldText4">
+                                        Start Date:
+                                    </div>
+                                    <div class="NameFieldInput4">
+                                        <input type="date" id="studentStartDate" placeholder="DD/MM/YYYY">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Interest:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="text" id="studentInterest" placeholder="UI/UX">
+
+                                </div>
+
+                            </div>
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Unit:
+                                </div>
+                                <div class="NameFieldInput" id="unitDisplay">
+                                    <input type="text" id="studentUnit" readonly>
+                                </div>
+                                <div class="caretdown" id="caretdown">
+                                    <img src="./assets/CaretDown.svg" alt="">
+                                </div>
+
+                                <!-- ----------Unit dropdown -->
+                                <div class="unitDrop" id="unitDrop">
+                                    <div class="unitLIst">
+                                        Information Technology
+                                    </div>
+                                    <div class="unitLIst">
+                                        Communications
+                                    </div>
+                                    <div class="unitLIst">
+                                        Strategic Information
+                                    </div>
+                                    <div class="unitLIst">
+                                        Human Resources
+                                    </div>
+                                    <div class="unitLIst">
+                                        Administration
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Supervisor:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="text" id="studentSupervisor" readonly>
+                                </div>
+                            </div>
+
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Email:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="email" id="studentEmail" autocomplete="off" readonly
+                                        onfocus="this.removeAttribute('readonly')">
+                                </div>
+                            </div>
+
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Password:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="password" id="studentPassword" autocomplete="new-password" readonly
+                                        onfocus="this.removeAttribute('readonly')">
+                                </div>
+                            </div>
+
+                            <div class="NameFieldContain">
+                                <div class="NameFieldText">
+                                    Confirm Password:
+                                </div>
+                                <div class="NameFieldInput">
+                                    <input type="password" id="studentConfirmPassword">
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="saveBtn" id="saveBtn">
+                            Save
+                        </div>
+                    </div>
+                </div>
+                <!-- -------------End of modal--------- -->
+
+                <!-- ---------- Mini Success Modal------------ -->
+                <div class="overlay3" id="overlay3">
+                    <div class="successModal" id="successModal">
+                        <div class="modalHead3">
+                            <div class="headText2">
+                                Success!
+                            </div>
+
+                        </div>
+                        <div class="modalBody">
+                            <div class="successImg">
+                                <img src="./assets/Vector copy 3.png" alt="">
+                            </div>
+                            <div class="successTxt">
+                                Success!
+                            </div>
+
+                        </div>
+                        <div class="modalFooter">
+                            <div class="okayBtn" id="okayBtn">
+                                Okay
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
 
                 <div class="infoBodyContain">
@@ -172,7 +377,7 @@
                             <div class="infoLabel">
                                 Start Date
                             </div>
-                            <div class="infoData">
+                            <div id="startdate" class="infoData">
                                 01/05/2025
                             </div>
                         </div>
@@ -199,6 +404,65 @@
                     </div>
                 </div>
             </div>
+            <!-- <div class="deactivateBtn" id="deactivate">
+                Deactivate
+            </div> -->
+
+            <!-- ------Mini Modal----- -->
+            <div class="overlay2" id="overlay2">
+                <div class="confirmModal" id="confirmModal">
+                    <div class="modalHead2">
+                        <div class="headText2">
+                            Confirm Deactivation
+
+                        </div>
+                        <div class="closeBox">
+                            <img src="./assets/close-circle.svg" alt="" id="closeDeactivateModal">
+
+                        </div>
+
+                    </div>
+                    <div class="confirmTxt">
+                        Are you sure you want to deactivate this student?
+                    </div>
+                    <div class="confirmBtnContain">
+                        <div class="cancelBtn" id="cancelBtn">
+                            Cancel
+                        </div>
+                        <div class="proceedBtn" id="proceedBtn">
+                            Proceed
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- ---------- Mini Success Modal------------ -->
+            <div class="overlay4" id="overlay4">
+                <div class="successModal2" id="successModal2">
+                    <div class="modalHead4">
+                        <div class="headText2">
+                            Deactivated!
+                        </div>
+
+                    </div>
+                    <div class="modalBody">
+                        <div class="successImg">
+                            <img src="./assets/Vector copy 4.png" alt="">
+                        </div>
+                        <div class="successTxt">
+                            You’ve successfully deactivated this student.
+                        </div>
+
+                    </div>
+                    <div class="modalFooter">
+                        <div class="okayBtn2" id="okayBtn2">
+                            Okay
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
         </div>
 
     </section>
