Fixed staff view and made public read access

--- a/frontend/staff-view/studentLog.html
+++ b/frontend/staff-view/studentLog.html
@@ -427,6 +427,7 @@
     </section>
     <script src="/frontend/config.js"></script>
     <script src="/frontend/staff-view/scripts/log.js"></script>
+    <script src="/frontend/staff-view/scripts/backend/studentLog.js"></script>
 </body>
 
 </html>
