Added supervisor signature

--- a/frontend/supervisor-view/StudentLog.html
+++ b/frontend/supervisor-view/StudentLog.html
@@ -216,10 +216,10 @@
                         <div class="comment-section">
                             <input type="text" class="comment-input" placeholder="Enter comment" />
                             <div class="button-container">
+                                <div class="signature">
+                                    <img class="signature-imgage" src="./assets/Vector.svg" alt="Signature Placeholder">
+                                </div>
                                 <button class="sign-button">Sign</button>
-                            </div>
-                            <div class="signature">
-                                <!-- <img src="./assets/Vector.svg" alt="Signature Placeholder"> -->
                             </div>
                         </div>
                     </div>
@@ -263,6 +263,7 @@
 
     <!-- Main JS Script -->
     <script src="/frontend/config.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.1.6/dist/signature_pad.umd.min.js"></script>
     <script src="/frontend/supervisor-view/routes/route.js"></script>
     <script src="/frontend/supervisor-view/scripts/studentLog.js"></script>
     <script src="/frontend/supervisor-view/scripts/backend/studentLog.js"></script>
