added new default photo

--- a/frontend/user-view/studentProfile.html
+++ b/frontend/user-view/studentProfile.html
@@ -252,7 +252,7 @@
   <script src="/frontend/user-view/scripts/studentProfile.js"></script>
   <script src="/frontend/user-view/scripts/backend/studentProfile.js"></script>
   <script src="/frontend/user-view/routes/route.js"></script>
-  <!-- <script src="/frontend/user-view/scripts/backend/uploadImage.js"></script> -->
+  <script src="/frontend/user-view/scripts/backend/image.js"></script>
 </body>
 
 </html>
